--- a/todo.txt
+++ b/todo.txt
@@ -10,4 +10,4 @@
 ** TODO make the aliens drop bombs
 ** TODO make the aliens follow a pattern around the screen
 ** TODO boss?
-
+** TODO code reorg
