--- a/todo.txt
+++ b/todo.txt
@@ -2,7 +2,7 @@
 -*- org -*-
 
 * TODO
-** TODO sensors to eliminate objects that escape the stage
+** DONE sensors to eliminate objects that escape the stage
 ** TODO another 'ship' on the bottom with different controls
 ** TODO multiplayer (initial screen, integrate hxmp)
 ** TODO link the ships, make them fire when they get closer
@@ -10,4 +10,4 @@
 ** TODO make the aliens drop bombs
 ** TODO make the aliens follow a pattern around the screen
 ** TODO boss?
-** TODO code reorg
+** DONE code reorg
