--- a/todo.txt
+++ b/todo.txt
@@ -3,11 +3,11 @@
 
 * TODO
 ** DONE sensors to eliminate objects that escape the stage
-** TODO another 'ship' on the bottom with different controls
+** DONE another 'ship' on the bottom with different controls
 ** TODO multiplayer (initial screen, integrate hxmp)
 ** TODO link the ships, make them fire when they get closer
 ** TODO controller code?
-** TODO make the aliens drop bombs
+** DONE make the aliens drop bombs
 ** TODO make the aliens follow a pattern around the screen
 ** TODO boss?
 ** DONE code reorg
