--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,7 @@
 ** DONE sensors to eliminate objects that escape the stage
 ** DONE another 'ship' on the bottom with different controls
 ** TODO multiplayer (initial screen, integrate hxmp)
+*** TODO state representation
 ** TODO link the ships, make them fire when they get closer
 ** TODO controller code?
 ** DONE make the aliens drop bombs
