--- a/todo.txt
+++ b/todo.txt
@@ -4,10 +4,10 @@
 * TODO
 ** DONE sensors to eliminate objects that escape the stage
 ** DONE another 'ship' on the bottom with different controls
-** TODO multiplayer (initial screen, integrate hxmp)
+** DONE multiplayer (initial screen, integrate hxmp)
 *** DONE state representation
-*** TODO ui for client/server
-** TODO link the ships, make them fire when they get closer
+*** DONE ui for client/server
+** DONE link the ships, make them fire when they get closer
 ** TODO controller code?
 ** DONE make the aliens drop bombs
 ** TODO make the aliens follow a pattern around the screen
